--- a/index.html
+++ b/index.html
@@ -12,5 +12,18 @@
     <header>
         <h1 class="text-xl, text-center mt-16">Wellcome my numbericul system <span class="font-semibold text-blue-600">with website</span></h1>
     </header>
+    <main>
+        <section class="bg-green-100 w-3/4 p-8 mx-auto mt-8">
+            <h2 class="text-2xl mb-4">Pleace Login</h2>
+            <div>
+                <input id="user-mail" class="border block border-gray-400 rounded w-3/4 mb-4 px-2" type="text"
+                placeholder="Text your E-mail">
+                <input id="user-pass" type="password" class="border block border-gray-400 rounded w-3/4 mb-4 px-2"
+                placeholder="write your password">
+                <button id="logins" class="border px-4 py-2 text-white font-medium rounded block bg-yellow-600">click</button>
+            </div>
+        </section>
+    </main>
+    <script src="js/bank.js"></script>
 </body>
 </html>
